# rwirret

./: .env.local  .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml
.docker/: Dockerfile
assets/: tailwind.css
entity/: Cargo.toml
entity/src/: followers.rs  mod.rs  post.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250529_000001_create_tables.rs
src/: auth.rs  main.rs
src/components/: button.rs  echo.rs  input.rs  mod.rs
src/database/: database.rs  mod.rs  user.rs
src/models/: user.rs
src/views/: home.rs
